# alpha-momentum-nordic

./: .editorconfig  .gitignore  01_phase1_infrastructure_and_data.md  02_phase2_research_validation.md  03_broker_readiness_and_live_execution.md  04_phase4_forward_monitoring_and_governance.md  AlphaMomentum_PRD_v4.md  CLEANUP_PLAN.md  CMakeLists.txt  README.md  REPO_STRUCTURE_PLAN.md  TEST_PLAN.md  WINDOWS_SETUP_CHECKLIST.md  config.py  config.py.bak  config_cpp.json  engine.py  open_dashboard.bat  requirements.txt  run_forward_monitor.bat  run_live_paper_trade.bat  run_monthly_rebalance.bat  run_paper_trade.bat  vcpkg.json
papertrading/: lead_portfolio_history.csv  lead_portfolio_state.json  lead_trade_ledger.csv  papertrading_log.csv  portfolio_history.csv  portfolio_state.json  shadow_portfolio_history.csv  shadow_portfolio_state.json  shadow_trade_ledger.csv  trade_ledger.csv
portfolio/: README.html  index.html
protocols/: holdout_2005_2015.json  holdout_2015_2025.json
python/: __init__.py  build_main_market_allowlist.py  build_universe.py  cadence_engine.py  candidate_comparison_dashboard.py  download_eodhd.py  download_riksbank_fx.py  forward_monitor.py  grid_search.py  holdout_window_compare.py  live_paper_engine.py  ma_window_cadence_compare.py  ma_window_full_engine.py  ma_window_sweep.py  monthly_rebalance_runner.py  paper_trade_tracker.py  paper_trading_engine.py  phase1_lib.py  pre_registered_batch_engine.py  pre_registered_engine.py  render_phase2_sweep_dashboard.py  render_phase3_holdout_dashboard.py  research_engine.py  run_cadence_compare.py  (+6 more)
(+953 files in other folders)
